--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TMP</title>
+    <title>CSS Foundations</title>
+
+<!-- External style perffered  -->
+<link rel="stylesheet" href="style.css">
+    <!-- internal Styling avoid -->
+
+
 </head>
 <body>
     
-<h1>TMP</h1>
+<h1>CSS Foundations</h1>
+
+    <!-- inline dont do  -->
+    <!-- <h1 style="color : red">CSS Foundations</h1> -->
 
 </body>
 </html>
